# hzel

./: .gitignore  Cargo.toml  code.txt  sqltest.sql  testpage.html
frontend/: package-lock.json
frontend/routerdocs/: Installation _ React Router.html  Navigating _ React Router.html  Routing _ React Router.html  URL Values _ React Router.html
frontend/src/: index.css
migrations/: 20250807035454_init.sql  20250807062121_sessions.sql
src/: app.rs  ast.rs  auth.rs  bytecode.rs  database.rs  lexer.rs  lib.rs  main.rs  opcodes.rs  parser.rs  vm.rs
