[package]
name = "hzel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-signed"] }
fastcdc = "3.2.1"
futures-util = "0.3.31"
http-range-header = "0.4.2"
jiff = "0.2.15"
metrics = "0.24.2"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
password-auth = "1.0.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tap = "1.0.1"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
typeshare = "1.0.4"
uuid = { version = "1.17.0", features = ["v4"] }
